[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psm-causal-lite"
version = "0.2.0"
description = "轻量级倾向得分匹配 (PSM) 因果推断工具 — 零额外依赖，仅需 sklearn + numpy"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "jmdonbaba"},
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "scipy>=1.7",
    "matplotlib>=3.4",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/jmdonbaba/psm-causal-lite"
Repository = "https://github.com/jmdonbaba/psm-causal-lite.git"

[tool.setuptools.packages.find]
where = ["src"]
